2011-04-25  Adam Barth  <abarth@webkit.org>

        Reviewed by James Robinson.

        DOMWindow.cpp should work with strict OwnPtrs
        https://bugs.webkit.org/show_bug.cgi?id=59356

        * page/DOMWindow.cpp:
        (WebCore::PostMessageTimer::fired):
        (WebCore::DOMWindow::postMessageTimerFired):
        * page/DOMWindow.h:

2011-04-25  Adam Klein  <adamk@chromium.org>

        Reviewed by James Robinson.

        Fix OwnPtr strict errors in some SVG classes.
        https://bugs.webkit.org/show_bug.cgi?id=59395

        * rendering/style/SVGRenderStyleDefs.cpp:
        (WebCore::StyleShadowSVGData::StyleShadowSVGData):
        * svg/SVGSVGElement.cpp:
        (WebCore::SVGSVGElement::SVGSVGElement):
        * svg/SVGStyledTransformableElement.cpp:
        (WebCore::SVGStyledTransformableElement::supplementalTransform):
        * svg/SVGTextElement.cpp:
        (WebCore::SVGTextElement::supplementalTransform):
        * svg/graphics/SVGImage.cpp:
        (WebCore::SVGImage::dataChanged):

2011-04-25  Adam Barth  <abarth@webkit.org>

        Re-land changes to ValidationMessage.

        * html/ValidationMessage.cpp:
        (WebCore::ValidationMessage::setMessage):
        (WebCore::ValidationMessage::setMessageDOMAndStartTimer):
        (WebCore::ValidationMessage::requestToHideMessage):

2011-04-25  Ojan Vafai  <ojan@chromium.org>

        Reviewed by James Robinson.

        fix OwnPtr strict error in FrameView.cpp
        https://bugs.webkit.org/show_bug.cgi?id=59402

        * page/FrameView.cpp:
        (WebCore::FrameView::FrameView):
        (WebCore::FrameView::addWidgetToUpdate):

2011-04-25  Adam Klein  <adamk@chromium.org>

        Unreviewed, rolling out r84844.
        http://trac.webkit.org/changeset/84844
        https://bugs.webkit.org/show_bug.cgi?id=59395

        Checked in too much.

        * rendering/style/SVGRenderStyleDefs.cpp:
        (WebCore::StyleShadowSVGData::StyleShadowSVGData):